# AgenticDocument_Extractor

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD_README.md  IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_dashboard.py  setup.py  verify_dashboard.py  vqa_extracted.json
configs/: default.yaml
docs/: MIGRATION_V1_TO_V2.md  SCHEMA_GUIDE.md
examples/sample_outputs/: agent_details_output.json  voter_list_output.json  vqa.json  vqa_parsed.json
examples/schemas/: README.md  agent_details_schema.json  invoice_schema.json  receipt_schema.json  schema.json  voter_list_schema.json  vqa.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/extraction/: ExtractionPanel.tsx
frontend/src/components/parsing/: ParsingPanel.tsx
frontend/src/components/preview/: DocumentView.tsx  DocumentViewer.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
frontend/src/components/upload/: UploadView.tsx
frontend/src/types/: index.ts
notebooks/: demo.ipynb
src/: __init__.py
src/agents/: __init__.py  orchestrator.py  prompts.py  tools.py
src/api/: __init__.py  main.py  models.py  store.py
src/api/routes/: documents.py  extraction.py  parsing.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  dataclasses.py  layout_detector.py  ocr_engine.py  region_processor.py
src/extractors/: __init__.py  schema_extractor.py  schemas.py
src/pipelines/: __init__.py  document_processor.py
src/utils/: __init__.py  helpers.py  visualization.py
tests/: __init__.py  test_layout.py  test_ocr.py  test_pipeline.py  test_tools.py
